--- a/STATS331Final.qmd
+++ b/STATS331Final.qmd
@@ -7,6 +7,7 @@ format:
     code-tools: true
     toc: true
     number-sections: true
+    code-fold: true
 editor: visual
 execute: 
   error: true
